Task-53903: Fix Info and 3 dots icons aligned (#150)

--- a/documents-webapp/src/main/webapp/skin/less/documents.less
+++ b/documents-webapp/src/main/webapp/skin/less/documents.less
@@ -98,10 +98,10 @@
       .documents-table {
         tbody {
           tr:hover button.v-icon.mdi-dots-vertical.button-document-action {
-            display: contents !important;
+            display: flex !important;
           }
           tr:hover .button-info-details button.v-icon.fa-info-circle {
-            display: contents !important;
+            display: initial !important;
           }
 
           td {
